# BETM-Energy-Contract-Marketplace

./: .gitignore  DECISIONS.md  FEEDBACK.md  PLAN.md  README.md
backend/: .env.example  dev.db  pyproject.toml  railway.toml  seed.py
backend/app/: cache.py  database.py  main.py  models.py  schemas.py
backend/app/crud/: contracts.py  portfolio.py
backend/app/routers/: contracts.py  meta.py  portfolio.py
backend/tests/: conftest.py  test_contracts.py  test_portfolio.py
frontend/: package.json  playwright.config.ts
frontend/e2e/: marketplace.spec.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts  contracts.ts  meta.ts  portfolio.ts
frontend/src/components/: ContractTable.tsx  EnergyBadge.tsx  FilterPanel.tsx  Layout.tsx  PortfolioPanel.tsx  PortfolioSummary.tsx  StatusBadge.tsx
frontend/src/components/ui/: table.tsx
frontend/src/hooks/: useContracts.ts  useEnums.ts  useFilteredContracts.ts  usePortfolio.ts
frontend/src/lib/: colors.ts  format.ts
frontend/src/store/: useFilterStore.ts
frontend/src/types/: index.ts
